Actually fix z-index of map legend

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1281,7 +1281,7 @@ footer{
   }
 }
 
-.leaflet-bottom {
+.section-visualisation .leaflet-bottom {
   z-index: 2;
 }
 
